force-app/main/default/objects/Stylist_Service__c/Stylist_Service__c.object-meta.xml
<CustomObject>
    <label>Stylist Service</label>
    <pluralLabel>Stylist Services</pluralLabel>
    <nameField>
        <label>Stylist Service Name</label>
        <displayFormat>SS-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object linking stylists to services they can perform</description>
</CustomObject>