force-app/main/default/objects/Stylist_Service__c/fields/Duration_Override__c.field-meta.xml
<CustomField>
    <fullName>Duration_Override__c</fullName>
    <label>Duration Override (Minutes)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Custom duration if this stylist takes longer or shorter</description>
    <inlineHelpText>Leave blank to use standard duration. Enter minutes if this stylist needs different time.</inlineHelpText>
</CustomField>