force-app/main/default/objects/Stylist_Service__c/fields/Price_Override__c.field-meta.xml
<CustomField>
    <fullName>Price_Override__c</fullName>
    <label>Price Override</label>
    <type>Currency</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Custom price if this stylist charges differently than standard</description>
    <inlineHelpText>Leave blank to use standard service price. Enter amount if this stylist charges a different rate.</inlineHelpText>
</CustomField>