force-app/main/default/objects/Stylist_Service__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>MasterDetail</type>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Stylists Who Offer This</relationshipLabel>
    <relationshipName>Stylist_Services</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <description>The service this stylist can perform</description>
    <inlineHelpText>Select the service</inlineHelpText>
</CustomField>