force-app/main/default/objects/Stylist_Service__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <label>Service Name</label>
    <type>Text</type>
    <formula>Service__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Displays the service name for use in related lists and reports</description>
    <inlineHelpText>The name of the service (formula: Service__r.Name)</inlineHelpText>
</CustomField>