force-app/main/default/objects/Stylist_Service__c/fields/Stylist__c.field-meta.xml
<CustomField>
    <fullName>Stylist__c</fullName>
    <label>Stylist</label>
    <type>MasterDetail</type>
    <referenceTo>Stylist__c</referenceTo>
    <relationshipLabel>Services Offered</relationshipLabel>
    <relationshipName>Stylist_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>The stylist who can perform this service</description>
    <inlineHelpText>Select the stylist</inlineHelpText>
</CustomField>