force-app/main/default/objects/Stylist_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Name__c</columns>
    <columns>Stylist__c</columns>
    <columns>Price_Override__c</columns>
    <columns>Duration_Override__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>